# elrif_back

./: .gitignore  Dockerfile  compose.yml  pyproject.toml
src/: __init__.py  config.py
src/application/: dependencies.py  exceptions.py  uow.py
src/application/services/: profile_service.py  talent_service.py
src/auth/: deps.py  routes.py
src/core/security/: jwt.py  password.py
src/db/: main.py  models.py  redis.py
src/domain/profiles/: i_profile_repository.py  models.py
src/domain/talents/: i_talent_repository.py  models.py
src/infrastructure/: __init__.py  sql_uow.py
src/infrastructure/db/: main.py  models.py
src/infrastructure/reps/sqlalchemy/: profile_repository.py  talents_repository.py
src/infrastructure/reps/sqlalchemy/profiles/: repository.py
src/infrastructure/reps/sqlalchemy/talents/: repository.py
src/presentation/auth/: auth_routes.py
src/presentation/profiles/: profile_routes.py  schemas.py
src/presentation/talents/: routes.py  schemas.py
src/teams/: schemas.py
src/users/: router.py  schemas.py  services.py
tests/: conftest.py  test_basic_logic.py
tests/integration/: test_profiles.py  test_talent_create.py
